# gemma3-refusal-axis

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/hooks/: check-evidence-pinning.sh  format-python.sh
.github/workflows/: deploy-pages.yml
data/: HF_README.md  contrastive_pairs.json  domain_capability_boundary.json  domain_ethical.json  domain_identity_boundary.json  domain_legal.json  domain_privacy.json  domain_safety.json  refusal_scores.json  responses_manifest.json  retained_pairs.json  supplementary_pairs.json
data/capping_results/: analysis.json  calibration.json  generations.json  scores.json
data/hierarchy_results/: all_methods.json  method1_decoder_cosine.json
data/milestone_4_results/: contrastive_last_prompt_token_16k.json  contrastive_last_prompt_token_1M.json  contrastive_last_prompt_token_262k.json  contrastive_last_prompt_token_65k.json  contrastive_mean_response_token_16k.json  contrastive_mean_response_token_1M.json  contrastive_mean_response_token_65k.json  cosine_last_prompt_token.json  cosine_mean_response_token.json  domain_profiles_last_prompt_token.json  domain_profiles_mean_response_token.json
data/milestone_5_results/: analysis.json  generations.json  scores.json  selected_features.json
data/scores/: pass_1.json  (+2 more)
notebooks/: refusal_axis_explorer.py  refusal_decomposition_demo.py  sae_width_scaling_explorer.py
plans/: plan_assistant_axis_crossanalysis.md  plan_feature_hierarchy_analysis.md  plan_refusal_axis_falsification.md  rq1_poc_plan.md  steering_methodology_critique.md  steering_methodology_review.md
web/: index.html  package-lock.json  package.json  vite.config.js
(+85 files in other folders)
